# alg_robo_p1

./: README.md
catkin/: fiveseven.txt~  out.txt  output.txt  output2.txt  rangemap.txt~
catkin/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin/devel/include/algp1_msgs/: Pose2DWithCovariance.h  PoseScan.h  PoseScanVector.h
catkin/devel/lib/filters/: kf  scan_queue  scan_queue_2  sense_model  vel_model
catkin/devel/lib/motion/: laser_sweep  simple_movement
catkin/devel/lib/noisey/: noisey
catkin/devel/lib/pkgconfig/: algp1_msgs.pc  ekf.pc  filters.pc  motion.pc  noisey.pc  noisey_lib.pc  stdr_world.pc
catkin/devel/lib/python2.7/dist-packages/algp1_msgs/msg/: _Pose2DWithCovariance.py  _PoseScan.py  _PoseScanVector.py  __init__.py
catkin/devel/share/algp1_msgs/cmake/: algp1_msgs-msg-extras.cmake  algp1_msgs-msg-paths.cmake  algp1_msgsConfig.cmake
catkin/devel/share/common-lisp/ros/algp1_msgs/msg/: Pose2DWithCovariance.lisp  PoseScan.lisp  PoseScanVector.lisp  _package.lisp  _package_Pose2DWithCovariance.lisp  _package_PoseScan.lisp  _package_PoseScanVector.lisp  algp1_msgs-msg.asd
catkin/devel/share/ekf/cmake/: ekfConfig.cmake
catkin/devel/share/filters/cmake/: filtersConfig.cmake
catkin/devel/share/motion/cmake/: motionConfig.cmake
catkin/devel/share/noisey/cmake/: noisey-msg-extras.cmake  noisey-msg-paths.cmake  noiseyConfig.cmake
catkin/devel/share/noisey_lib/cmake/: noisey_libConfig.cmake
catkin/devel/share/stdr_world/cmake/: stdr_worldConfig.cmake
catkin/src/algp1_msgs/: CMakeLists.txt
catkin/src/algp1_msgs/msg/: Pose2DWithCovariance.msg  PoseScan.msg  PoseScanVector.msg
catkin/src/ekf/: CMakeLists.txt
catkin/src/filters/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_old.txt  package.xml
catkin/src/filters/src/: invert3x3.cpp  kf.cpp  scan_queue.cpp  scan_queue_2.cpp  sense_model.cpp  vel_model.cpp
catkin/src/motion/: CMakeLists.txt  package.xml
catkin/src/motion/src/: laser_sweep.cpp  simple_movement.cpp  simple_movement_with_error.cpp
catkin/src/noisey/: CMakeLists.txt  package.xml
catkin/src/noisey/src/: noisey.cpp
catkin/src/noisey_lib/: CMakeLists.txt  package.xml
catkin/src/noisey_lib/include/: noisey.h
catkin/src/stdr_world/: CMakeLists.txt  package.xml
documents/: .~lock.Project 1 Proposal.odt#  Project 1 Proposal.odt  commands.txt
